# vk_commander

./: .gitignore  Cargo.toml  about.toml  generated-sources.json  readme.md
build_resources/debian/DEBIAN/: control
build_resources/debian/usr/share/applications/: valkey-insight.desktop  vk_commander.desktop
build_resources/flatpak/: dev.oswald.ValkeyInsight-local.yml  dev.oswald.ValkeyInsight.desktop  dev.oswald.ValkeyInsight.metainfo.xml  dev.oswald.ValkeyInsight.yml  dev.oswald.vkCommander.desktop  dev.oswald.vkCommander.metainfo.xml
build_resources/misc/: valkey_insight.desktop  vk_commander.desktop
locales/: de.lang  en.lang  es.lang
scripts/: build_linux.sh  build_windows.sh  create_source_tarball.sh  valkey_insight.spec  vk_commander.spec  windows_installer.nsi
src/: errors.rs  i18n.rs  lib.rs  main.rs
src/state/: app_state.rs  message.rs  mod.rs  workbench_state.rs
src/ui/: mod.rs
src/ui/components/: browser_window.rs  connections_window.rs  documentation_window.rs  insights_window.rs  left_side_bar.rs  menu_bar.rs  mod.rs  ui_panels.rs  workbench_window.rs
src/ui/widgets/: error_modal.rs  info_modal.rs  mod.rs  modal.rs  popup.rs  shimmer.rs
src/ui/widgets/dialogs/: confirm_dialog.rs  mod.rs
src/ui/widgets/popups/: add_connection_popup.rs  add_key.rs  edit_key.rs  mod.rs  settings_popup.rs
src/utils/: commands.rs  misc.rs  mod.rs  settings.rs
src/utils/valkey/: key_type.rs  mod.rs  valkey_client.rs  valkey_url.rs  valkey_value.rs
